Tsx/tests/valid/tuple-types.parseset
# Valid Tuple Type Tests
# Tests for tuple type syntax in declarations

#! Valid expression
# 1. Simple tuple type declaration
coords: tuple(int, int) = (10, 20)

#! Valid expression
# 2. Three-element tuple type
position: tuple(float, float, float) = (1.0, 2.0, 3.0)

#! Valid expression
# 3. Mixed type tuple
person: tuple(string, int, logic) = ("Alice", 25, true)

#! Valid expression
# 4. Nested tuple types
matrix: tuple(tuple(int, int), tuple(int, int)) = ((1, 2), (3, 4))

#! Valid expression
# 5. Function with tuple parameter
ProcessPoint(p: tuple(int, int)): void = {}

#! Valid expression
# 6. Function returning tuple type
GetCoordinates(): tuple(float, float) = (0.0, 0.0)

#! Valid expression
# 7. Optional tuple type
maybeCoords: ?tuple(int, int) = false

#! Valid expression
# 8. Array of tuples
points: []tuple(int, int) = array{}

#! Valid expression
# 9. Tuple with complex types
data: tuple([]int, string, ?float) = (array{1, 2, 3}, "test", 1.5)

#! Valid expression
# 10. Function with multiple tuple parameters
Transform(from: tuple(float, float), to: tuple(float, float)): tuple(float, float) = from

#! Valid expression
# 11. Tuple type in class field
Point := class {
    coords: tuple(int, int) = (0, 0)
}

#! Valid expression
# 12. Tuple type in struct
Vector := struct {
    components: tuple(float, float, float)
}

#! Valid expression
# 13. Generic-like tuple type
KeyValue: tuple(string, any) = ("key", 42)

#! Valid expression
# 14. Tuple with option types
result: tuple(string, ?int, logic) = ("success", 100, true)

#! Valid expression
# 15. Complex nested tuple type
complexData: tuple(tuple(string, int), []tuple(float, float)) = (("test", 1), array{})